# just-getopt

./: Cargo.toml  README.md
examples/: basic.rs  basic_usage.rs
src/: lib.rs  parser.rs  tests.rs
src/parser/: tests.rs
