[package]
name = "just-getopt"
version = "1.1.0"
authors = ["Teemu Likonen <tlikonen@iki.fi>"]
license = "CC0-1.0"
description = "Just a getopt-like command-line option parser"
keywords = ["command-line", "options", "parser", "getopt_long"]
categories = ["command-line-interface"]
repository = "https://github.com/tlikonen/just-getopt"
documentation = "https://docs.rs/just-getopt/"
readme = "README.md"
rust-version = "1.56.1"
edition = "2021"

[dependencies]
